other-mpol/add-labels/.chainsaw-test/cm.yaml
apiVersion: v1
data:
  key: label
kind: ConfigMap
metadata:
  name: cm01
  labels:
    bar: foo
