other-mpol/add-labels/.chainsaw-test/secret-patched.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    bar: foo
    foo: bar
  name: secret01
