other-mpol/add-labels/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-labels
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: ../add-labels.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod-resources.yaml
    - apply:
        file: svc.yaml
    - apply:
        file: cm.yaml
    - apply:
        file: secret.yaml
  - name: step-03
    try:
    - assert:
        file: pod-resources-patched.yaml
    - assert:
        file: svc-patched.yaml
    - assert:
        file: cm-patched.yaml
    - assert:
        file: secret-patched.yaml
